--- a/.github/workflows/github-actions-ec2.yml
+++ b/.github/workflows/github-actions-ec2.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Deploy to Server 
         uses: appleboy/ssh-action@master
         with:
-          key: ${{ secrets.EC2_SSH_KEY }}
-          host: ${{ secrets.HOST_DNS }}
+          key: ${{ secrets.KEY }}
+          host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           port: ${{ secrets.PORT }}
           script: |
