--- a/.github/workflows/github-actions-ec2.yml
+++ b/.github/workflows/github-actions-ec2.yml
@@ -1,10 +1,9 @@
 name: Push-to-EC2
 
 # Trigger deployment only on push to master branch
-on:
-  push:
-    branches:
-      - main
+on: [push, workflow_dispatch]
+  branches:
+    - main
 
 jobs:
   deploy:
