--- a/.github/workflows/github-actions-ec2.yml
+++ b/.github/workflows/github-actions-ec2.yml
@@ -15,9 +15,9 @@ jobs:
         uses: appleboy/ssh-action@master
         with: 
           host: ${{ secrets.HOST_PROD }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ env.KEY_PROD }}
-          port: ${{ secrets.PORT }}
+          username: ${{ secrets.USERNAME_PROD }}
+          key: ${{ secrets.KEY_PROD }}
+          port: ${{ secrets.PORT_PROD }}
           script: |
             cd vintage
             git pull
