--- a/.github/workflows/github-actions-ec2.yml
+++ b/.github/workflows/github-actions-ec2.yml
@@ -14,7 +14,7 @@ jobs:
     name: deploy to modern
     runs-on: ubuntu-latest
     steps:
-      - run: echo "$NAME"
+      - run: echo "$GITHUB_REF"
       - name: Deploy to Server 2
         uses: appleboy/ssh-action@master
         with: 
