--- a/.github/workflows/github-actions-ec2.yml
+++ b/.github/workflows/github-actions-ec2.yml
@@ -13,7 +13,7 @@ jobs:
     name: deploy to modern
     runs-on: ubuntu-latest
     needs: [deploy]
-    if: always() && (needs.deploy.result == 'failure')
+    if: always() && (needs.deploy.result == 'success')
     steps:
       - run: echo "$GITHUB_REF"
       - name: Deploy to Server 2
